# recycle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
src/: minidump_test.cpp  recycle.cpp  recycle_manual.cpp  recycle_opt.cpp
src/include/: JITEngine.h  JITRuntime.h  LoggingPass.h  MiscUtils.h  PassManager.h  RemoveSuffixPass.h  RenamePass.h  Runtime.h  recycle.h
src/lib/: BasicBlockDisassembler.cpp  BasicBlockLifter.cpp  JITEngine.cpp  JITRuntime.cpp  LoggingPass.cpp  MinidumpContext.cpp  MiscUtils.cpp  PassManager.cpp  RemoveSuffixPass.cpp  RenamePass.cpp  Runtime.cpp  XEDDisassembler.cpp
src/lib/BitcodeManipulation/: AddMissingBlockHandler.cpp  AddMissingBlockHandler.h  AddMissingMemory.cpp  AddMissingMemory.h  AddMissingMemoryHandler.cpp  AddMissingMemoryHandler.h  BitcodeManipulation.h  CreateEntryWithState.cpp  CreateEntryWithState.h  ExtractMissingBlocks.cpp  ExtractMissingBlocks.h  InsertLogging.cpp  InsertLogging.h  MakeSymbolsInternal.cpp  MakeSymbolsInternal.h  MiscUtils.cpp  MiscUtils.h  OptimizeModule.cpp  OptimizeModule.h  RemoveSuffix.cpp  RemoveSuffix.h  Rename.cpp  Rename.h  ReplaceFunctions.cpp  ReplaceFunctions.h  ReplaceMissingBlockCalls.cpp  ReplaceMissingBlockCalls.h  ReplaceStackMemoryWrites.cpp  ReplaceStackMemoryWrites.h  SetGlobalVariable.cpp  SetGlobalVariable.h
src/lib/Disasm/: BasicBlockDisassembler.cpp  BasicBlockDisassembler.h  DecodedInstruction.h  XEDDisassembler.cpp  XEDDisassembler.h
src/lib/JIT/: JITEngine.cpp  JITEngine.h  JITRuntime.cpp  JITRuntime.h
src/lib/Lift/: BasicBlockLifter.cpp  BasicBlockLifter.h
src/lib/Minidump/: MinidumpContext.cpp  MinidumpContext.h
src/lib/Prebuilt/: Utils.cpp  Utils.h  Utils_manual.cpp  Utils_opt.cpp
src/lib/bitcode_manipulation/: InsertLogging.cpp  InsertLogging.h
src/lib/prebuilt/: Utils.cpp
src/test/: AddMissingBlockHandlerTest.cpp  AddMissingMemoryHandlerTest.cpp  MissingMemoryTrackerTest.cpp  llvm_jit_test.cpp
